moving things in and out

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,6 +45,7 @@
 
           {% if site.bitcoin_address %}
           <li>
+            <object type="image/svg+xml" data="{{ site.bitcoin_address }}.svg" width="100" height="100" border="1"></object>
             <span class="username">{{ site.bitcoin_address }}</span>
           </li>
           {% endif %}
