--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header id="header">
 	<a href="{{ site.baseurl }}">
-		<img src="{{ "img/fede.svg" | prepend: site.baseurl }}">
+		<img src="assets/{{ site.author.bitcoin_address }}.svg">
 	  <h1>{{ site.title }}</h1>
 	</a>
 </header>
