--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<footer><span>Template by <a href="https://github.com/KingFelix/emerald"><font color="white">Emerald</font></a></span></footer>
+<footer><span>Built with <a href="jekyllrb.com"><font color="white">Jekyll</font></a> - Template by <a href="https://github.com/KingFelix/emerald"><font color="white">Emerald</font></a></span></footer>
