--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,6 +11,6 @@
 
 	</div>
 
-	<object data="assets/{{ site.author.bitcoin_address }}.svg" type="image/svg+xml"></object>
+	<object data="/assets/{{ site.author.bitcoin_address }}.svg" type="image/svg+xml"></object>
 
 </nav>
