--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,9 @@ article .share .twitter:hover {
 #contact-list li:hover .fa-pinterest {
 	color: #CC2127;
 }
+#contact-list li:hover .fa-hackerrank {
+	color: #38E03E;
+}
 #contact-list li:hover .fa-rss {
 	color: #e74c3c;
 }
