--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,6 +37,11 @@
 			</a>
 		</li>
 		{% endif %}
+        <li>
+            <a class="btn btn-default btn-sm" href="/fingerprint.html" target="_blank">
+                <i class="fa fa-key fa-lg"></i>
+            </a>
+        </li>
 	</ul>
 	<ul id="contact-list-secondary" class="list-unstyled list-inline">
 		{% if site.author.pinterest %}
