--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -38,7 +38,7 @@
 		</li>
 		{% endif %}
         <li>
-            <a class="btn btn-default btn-sm" href="/fingerprint.html" target="_blank">
+            <a class="btn btn-default btn-sm" href="/gpg.html" target="_blank">
                 <i class="fa fa-key fa-lg"></i>
             </a>
         </li>
