--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
 		{% if site.author.gitlab %}
 		<li>
 			<a class="btn btn-default btn-sm" href="https://gitlab.com/{{ site.author.gitlab }}" target="_blank">
-				<i class="fa fa-gitlab-alt fa-lg"></i>
+				<i class="fa fa-gitlab fa-lg"></i>
 			</a>
 		</li>
 		{% endif %}
