--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,4 +1,7 @@
 <div class="page-header">
+  {% if site.git_repo_url %}
+    {% include git.html %}
+  {% endif %}
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div>
 	
