--- a/_includes/git.html
+++ b/_includes/git.html
@@ -1,3 +1,3 @@
 <div class="improve right hide-on-mobiles">
-   <a data-proofer-ignore href="https://github.com/jekyll/jekyll/edit/master/docs/{{ page.path }}" target="_blank"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
+   <a data-proofer-ignore href="{{ site.git_repo_url }}/edit/master/{{ page.path }}" target="_blank"><i class="fa fa-pencil"></i> &nbsp;Improve this page</a>
 </div>
